Search users by id, email, name
